--- a/Source/Android/Nevix/nevix/src/main/res/values/strings.xml
+++ b/Source/Android/Nevix/nevix/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="app_name">Nevix</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_main">Nevix Remote Client</string>
+    <string name="title_activity_main">Nevix Remote</string>
     <string name="auth_email">email:</string>
     <string name="auth_pass">pass:</string>
     <string name="auth_confirm">confirm:</string>
@@ -13,17 +13,19 @@
     <string name="title_activity_authenticate">Login</string>
     <string name="play_btn">Play</string>
     <string name="pause_btn">Pause</string>
-    <string name="next_btn">Next</string>
-    <string name="prev_btn">Prev</string>
-    <string name="volume_up_btn">Volume+</string>
-    <string name="volume_down_btn">Volume -</string>
-    <string name="rw_btn">RW</string>
-    <string name="ff_btn">FF</string>
-    <string name="full_btn">Full</string>
-    <string name="step_f_btn">Step+</string>
-    <string name="step_b_btn">Step-</string>
-    <string name="sys_volume_down_btn">SYSVol-</string>
-    <string name="sys_volume_up_btn">SYSVol+</string>
-    <string name="power_btn">Power off</string>
+    <string name="volume_up_btn">V++</string>
+    <string name="volume_down_btn">V--</string>
+    <string name="sys_volume_down_btn">SysVol--</string>
+    <string name="sys_volume_up_btn">SysVol++</string>
+    <string name="power_btn">Power OFF</string>
+    <string name="next_btn"><![CDATA[>>|]]></string>
+    <string name="prev_btn"><![CDATA[|<<]]></string>
+    <string name="rw_btn"><![CDATA[<<]]></string>
+    <string name="ff_btn"><![CDATA[>>]]></string>
+    <string name="full_btn"><![CDATA[<>]]></string>
+    <string name="step_f_btn"><![CDATA[>|]]></string>
+    <string name="step_b_btn"><![CDATA[|<]]></string>
+    <string name="log_off">Log Off</string>
+    <string name="title_activity_test">TestActivity</string>
 
 </resources>
