--- a/Source/Android/Nevix/nevix/src/main/res/values/strings.xml
+++ b/Source/Android/Nevix/nevix/src/main/res/values/strings.xml
@@ -29,5 +29,10 @@
     <string name="title_activity_test">TestActivity</string>
     <string name="Open">Open</string>
     <string name="title_activity_browse">Browse Media</string>
+    <string name="Sync">Sync</string>
+    <string name="sync_message">Syncing media...</string>
+    <string name="title_activity_base">BaseActivity</string>
+    <string name="media_is_outdated">Media is out of date.</string>
+    <string name="beginning_media_sync">Beginning media sync...</string>
 
 </resources>
