--- a/Source/Android/Nevix/nevix/src/main/res/values/strings.xml
+++ b/Source/Android/Nevix/nevix/src/main/res/values/strings.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Nevix</string>
+    <string name="app_name">NeviX</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_main">Nevix Remote</string>
     <string name="auth_email">email:</string>
     <string name="auth_pass">pass:</string>
     <string name="auth_confirm">confirm:</string>
-    <string name="auth_login_btn">NeviX</string>
+    <string name="auth_login_btn">Login</string>
     <string name="auth_register_btn">Register</string>
     <string name="title_activity_authenticate">Login</string>
     <string name="play_btn">Play</string>
